Implement product-list.component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="inventory-app">
-  <product-list
+  <products-list
     [productList]="products"
     (onProductSelected)="productWasSelected($event)">
-  </product-list>
+  </products-list>
 </div>
